# cdw-unit-cell-generator

./: .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.old  README  README.md  _config.yml  autogen.sh  configure  configure.ac  makefile.include  quick-autotool.sh  script-test-output.sh
docs/: README.md
inc/: Location.h  elements.h  header.h  header_c.h
src/: atomic_sites.c  elements.h  fractional.c  generateTMDSuperCell.c  header.h  printing.c  structure.c  testing.c  tmd_arr_functions.c  tmd_functions.c  tmd_functions.cpp  tmd_sc_generator.c  tmd_sc_generator.cpp
