AC_INIT(
	[TMD Unit Cell Generator],
	[0.3.0],
	[https://github.com/david-c-miller/cdw-unit-cell-generator/issues],
        [generateTMDSuperCell],
	[https://github.com/david-c-miller/cdw-unit-cell-generator])

AM_INIT_AUTOMAKE([subdir-objects foreign])
AC_PROG_CC
AC_PROG_INSTALL
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
