AC_INIT(
	[TMD Unit Cell Generator],
	[1.0.0-beta],
	[https://github.com/david-c-miller/cdw-unit-cell-generator/issues],
        [tmd_unit_cell_generator],
	[https://github.com/david-c-miller/cdw-unit-cell-generator])

AM_INIT_AUTOMAKE([subdir-objects foreign])

AC_PROG_CC
AC_PROG_CC_C_O
AC_PREREQ([2.59])

AC_CHECK_HEADERS([stdlib.h] [stdio.h] [math.h] [string.h] [time.h])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
